[gd_scene load_steps=9 format=3 uid="uid://br7jp4ax2dybo"]

[ext_resource type="Script" path="res://scripts/gatete_animated.gd" id="1_3vca6"]
[ext_resource type="Texture2D" uid="uid://bcxjw2lr54qbq" path="res://assets/sprites/cola.png" id="1_uudtv"]
[ext_resource type="Texture2D" uid="uid://b4p7lgpo1pk0n" path="res://assets/sprites/gatito.png" id="2_s3awr"]
[ext_resource type="Texture2D" uid="uid://bl303574v7cef" path="res://assets/sprites/ojos_gatete.png" id="3_55grs"]
[ext_resource type="Texture2D" uid="uid://crb5fswjernp3" path="res://assets/sprites/corazon_1.png" id="5_pquvh"]
[ext_resource type="AudioStream" uid="uid://c6uvof3w3bhgf" path="res://assets/sfx/volumen.wav" id="6_5fwdx"]

[sub_resource type="Animation" id="Animation_jxp73"]
resource_name = "cola_movement"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Cola:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.356035, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_28xag"]
_data = {
"cola_movement": SubResource("Animation_jxp73")
}

[node name="Gatete" type="Area2D"]
script = ExtResource("1_3vca6")

[node name="Cola" type="Sprite2D" parent="."]
position = Vector2(81, 358.5)
rotation = 0.0452516
texture = ExtResource("1_uudtv")
offset = Vector2(121, -167)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-283, -464)
polygon = PackedVector2Array(191, 82, 381, 82, 452, 23, 558, -10, 591, 128, 531, 264, 550, 301, 407, 490, 395, 618, 433, 742, 430, 885, 277, 938, 117, 881, 113, 744, 168, 608, 155, 485, 4, 302, 24, 263, -35, 132, -4, -4, 117, 28)

[node name="Gatito" type="Sprite2D" parent="."]
position = Vector2(-5, -3.5)
texture = ExtResource("2_s3awr")

[node name="ojosCenter" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, -213.5)

[node name="OjosGatete" type="Sprite2D" parent="ojosCenter"]
unique_name_in_owner = true
texture = ExtResource("3_55grs")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
autoplay = "cola_movement"
libraries = {
"": SubResource("AnimationLibrary_28xag")
}

[node name="LoveAnimation" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(5, -323)
emitting = false
amount = 4
speed_scale = 0.7
explosiveness = 1.0
randomness = 0.7
lifetime_randomness = 0.16
texture = ExtResource("5_pquvh")
emission_shape = 3
emission_rect_extents = Vector2(50, 50)
direction = Vector2(0, -1)
gravity = Vector2(0, 10)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
scale_amount_min = 0.0
scale_amount_max = 0.5

[node name="CatPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_5fwdx")
bus = &"sfx"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
